--- a/abstracts/_settings.scss
+++ b/abstracts/_settings.scss
@@ -1,3 +1,9 @@
+/*
+*   Inofrmacion que debes de leer antes de usar
+*   $Metodologia: http://getbem.com/introduction/
+*   $Estructura: https://medium.com/@aaronverones/using-the-7-1-sass-scss-pattern-with-angular-7-bb210c015dcc
+**/
+
 /***********************\
        $VARIABLES
 \***********************/
@@ -25,10 +31,11 @@
 *
 */
 
-$breakpoints: ('xs': 36em,
-    'md': 48em,
-    'lg': 62em,
-    'xl': 75em,
+$breakpoints: (
+  'xs': 36em,
+  'md': 48em,
+  'lg': 62em,
+  'xl': 75em
 ) !default;
 
 /****************************\
@@ -41,11 +48,13 @@ $breakpoints: ('xs': 36em,
 *
 **/
 
-$z-layers: ("modal": 9000,
-    "over": 900,
-    "default": 1,
-    "below": -1,
-    "bottomless-pit": -9000);
+$z-layers: (
+  'modal': 9000,
+  'over': 900,
+  'default': 1,
+  'below': -1,
+  'bottomless-pit': -9000
+);
 
 /******************************\
             LAYOUT
@@ -61,8 +70,8 @@ $padding: $gutterwidth;
 $minigutter: $gutterwidth / 2;
 $pagemaxwidth: 1024px;
 $radius: 3px;
-$hovertransition: .3s;
-$animationtime: .8s;
+$hovertransition: 0.3s;
+$animationtime: 0.8s;
 
 /***************************\
           $GRID
@@ -70,9 +79,8 @@ $animationtime: .8s;
 /**
 *   Variables para nuestro grid
 */
-$gap : $minigutter;
+$gap: $minigutter;
 $grid-size: 12;
-
 
 /********************************\
            $FONT FACE
@@ -83,17 +91,13 @@ $grid-size: 12;
 *
 **/
 
-$basefont : "Helvetica Neue",
-Helvetica,
-Arial,
-sans-serif;
-$altfont : $basefont;
-$codefont : "Courier New",
-monospace;
-$baseheadingfont : $altfont;
+$basefont: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$altfont: $basefont;
+$codefont: 'Courier New', monospace;
+$baseheadingfont: $altfont;
 
-$baseheadingfontweight : normal;
-$baseheadingfontcolor : inherit;
+$baseheadingfontweight: normal;
+$baseheadingfontcolor: inherit;
 
 $basefontsize: 16;
 
@@ -102,13 +106,15 @@ $basefontsize: 16;
 *   Esta variables se usar para generar clases en utilities.scss
 **/
 
-$size-vars: ("x-small" : .6,
-    "small" : .875,
-    "normal" : 1,
-    "medium": 1.5,
-    "big" : 2,
-    "x-big" : 3,
-    "landing": 5);
+$size-vars: (
+  'x-small': 0.6,
+  'small': 0.875,
+  'normal': 1,
+  'medium': 1.5,
+  'big': 2,
+  'x-big': 3,
+  'landing': 5
+);
 
 /****************************\
            $COLORS
@@ -136,15 +142,17 @@ $color-white: rgb(255, 255, 255);
 *   Colors Map
 *   Tenemos un mapa de colores para crear clases
 */
-$colors-map: (color-brand: $color-brand,
-    color-secondary: $color-secondary,
-    color-black: $color-black,
-    color-darkergrey: $color-darkergrey,
-    color-darkgrey: $color-darkgrey,
-    color-grey: $color-grey,
-    color-lightgrey: $color-lightgrey,
-    color-lightergrey: $color-lightergrey,
-    color-white: $color-white);
+$colors-map: (
+  color-brand: $color-brand,
+  color-secondary: $color-secondary,
+  color-black: $color-black,
+  color-darkergrey: $color-darkergrey,
+  color-darkgrey: $color-darkgrey,
+  color-grey: $color-grey,
+  color-lightgrey: $color-lightgrey,
+  color-lightergrey: $color-lightergrey,
+  color-white: $color-white
+);
 
 /**
 *   Atmósfera
@@ -152,14 +160,14 @@ $colors-map: (color-brand: $color-brand,
 $background: $color-white;
 $headingcolor: lighten(black, 20%);
 $textcolor: lighten(black, 30%);
-$color-border : $color-lightergrey;
+$color-border: $color-lightergrey;
 
 /**
 *   Links
 */
-$linkcolor : color-brand(color-brand);
+$linkcolor: color-brand(color-brand);
 $linkcolorhover: $linkcolor;
-$linkcolorvisited : $linkcolor;
+$linkcolorvisited: $linkcolor;
 $linkcolorfocus: $linkcolor;
 
 /****************************\
@@ -191,53 +199,51 @@ $alertinfocolor: lighten($color-info, 10%);
 $alertinfoborder: darken($color-info, 10%);
 $alertinfotext: darken($color-info, 50%);
 
-
 // Success
 $alertsuccesscolor: lighten($color-success, 30%);
-$alertsuccessborder : lighten($color-success, 20%);
+$alertsuccessborder: lighten($color-success, 20%);
 $alertsuccesstext: darken($color-success, 20%);
 
 // Advertencia
 $alertwarningcolor: lighten($color-warning, 30%);
-$alertwarningborder : lighten($color-warning, 20%);
+$alertwarningborder: lighten($color-warning, 20%);
 $alertwarningtext: darken($color-warning, 20%);
 
 // badges
-$badgebackground : transparent;
-$badgecolor : $textcolor;
+$badgebackground: transparent;
+$badgecolor: $textcolor;
 
 // botones
-$buttonbackground : transparent;
-$buttonbordercolor : currentcolor;
-$buttoncolor : $textcolor;
-$buttonborderwidth : 1px;
-$buttonborderstyle : solid;
+$buttonbackground: transparent;
+$buttonbordercolor: currentcolor;
+$buttoncolor: $textcolor;
+$buttonborderwidth: 1px;
+$buttonborderstyle: solid;
 
 // boxes (well)
-$wellbackground : red;
-$wellbordercolor : darken($wellbackground, 20%);
-$wellborderwidth : 1px;
-$wellborderstyle : solid;
-$wellshadow : darken($wellbackground, 10%);
-$wellshadowblur : 10px;
+$wellbackground: red;
+$wellbordercolor: darken($wellbackground, 20%);
+$wellborderwidth: 1px;
+$wellborderstyle: solid;
+$wellshadow: darken($wellbackground, 10%);
+$wellshadowblur: 10px;
 
 // tablas
-$tablebackground : transparent;
-$tablestripe : $color-lightergrey;
-$tablehover : $color-lightergrey;
-$tableborder : $color-grey;
-$tableborderwidth : 1px;
-$tableborderstyle : solid;
+$tablebackground: transparent;
+$tablestripe: $color-lightergrey;
+$tablehover: $color-lightergrey;
+$tableborder: $color-grey;
+$tableborderwidth: 1px;
+$tableborderstyle: solid;
 
 // formularios
-$inputbackground : $color-white;
-$inputborder : $color-lightgrey;
-$inputborderwidth : 1px;
-$inputborderstyle : solid;
-$inputhover : lighten($color-black, 50%);
-$inputfocus : $color-brand,
-40%;
-$placeholdercolor : $color-lightergrey;
+$inputbackground: $color-white;
+$inputborder: $color-lightgrey;
+$inputborderwidth: 1px;
+$inputborderstyle: solid;
+$inputhover: lighten($color-black, 50%);
+$inputfocus: $color-brand, 40%;
+$placeholdercolor: $color-lightergrey;
 
 // Navegación
 $nav-width: 42px;
