--- a/layout/_textures.scss
+++ b/layout/_textures.scss
@@ -3,82 +3,82 @@
 \**********************/
 
 %alert {
-    margin-bottom: $baselineheight;
-    padding: 8px 35px 8px 14px;
-    background-color: $color-alert;
-    border: $alertborderwidth $alertborderstyle $alertbordercolor;
-    font-family: $basefont;
+  margin-bottom: $baselineheight;
+  padding: 8px 35px 8px 14px;
+  background-color: $color-alert;
+  border: $alertborderwidth $alertborderstyle $alertbordercolor;
+  font-family: $basefont;
+  font-size: fs(small);
+  color: $alerttext;
+  border-radius: $radius;
+  position: relative;
+
+  .alert--heading {
+    color: inherit;
+  }
+
+  .close {
+    position: absolute;
+    top: -2px;
+    right: 2px;
+    float: right;
     font-size: fs(small);
-    color: $alerttext;
-    border-radius: $radius;
-    position: relative;
-
-    .alert--heading {
-        color: inherit;
-    }
-
-    .close {
-        position: absolute;
-        top: -2px;
-        right: 2px;
-        float: right;
-        font-size: fs(small);
-        font-weight: bold;
-        line-height: 18px;
-        color: inherit;
-    }
+    font-weight: bold;
+    line-height: 18px;
+    color: inherit;
+  }
 }
 
 .alert--success {
-    @extend %alert;
-    background-color: $alertsuccesscolor;
-    border-color: $alertsuccessborder;
-    color: $alertsuccesstext;
+  @extend %alert;
+  background-color: $alertsuccesscolor;
+  border-color: $alertsuccessborder;
+  color: $alertsuccesstext;
 }
 
 .alert--warning {
-    @extend %alert;
-    background-color: $alertwarningcolor;
-    border-color: $alertwarningborder;
-    color: $alertwarningtext;
+  @extend %alert;
+  background-color: $alertwarningcolor;
+  border-color: $alertwarningborder;
+  color: $alertwarningtext;
 }
 
 .alert--error {
-    @extend %alert;
-    background-color: $alerterrorcolor;
-    border-color: $alerterrorborder;
-    color: $alerterrortext;
+  @extend %alert;
+  background-color: $alerterrorcolor;
+  border-color: $alerterrorborder;
+  color: $alerterrortext;
 }
 
 .alert--info {
-    @extend %alert;
-    background-color: $alertinfocolor;
-    border-color: $alertinfoborder;
-    color: $alertinfotext;
+  @extend %alert;
+  background-color: $alertinfocolor;
+  border-color: $alertinfoborder;
+  color: $alertinfotext;
 }
 
 /*
 *   Alert block
 **/
 .alert--block {
-    @extend %alert;
-    padding-top: 14px;
-    padding-bottom: 14px;
+  @extend %alert;
+  padding-top: 14px;
+  padding-bottom: 14px;
 
-    .alert--heading {
-        margin-bottom: $baselineheight / 8;
-        font-size: inherit;
-        font-weight: bold;
-    }
+  .alert--heading {
+    margin-bottom: $baselineheight / 8;
+    font-size: inherit;
+    font-weight: bold;
+  }
 
-    >p,
-    >ul {
-        margin-bottom: 0;
-    }
+  > p,
+  > ul {
+    margin-bottom: 0;
+  }
 
-    p+p {
-        margin-top: 5px;
-    }
+  p + p {
+    margin-top: 5px;
+  }
 }
 
 /*
@@ -86,70 +86,68 @@
 **/
 
 %badge {
-    padding: 0.1em 0.3em;
-    margin-right: 3px;
-    font-size: fs(small);
-    white-space: nowrap;
-    border: 1px solid currentcolor;
-    border-radius: $radius;
-    color: $badgecolor;
-    background-color: $badgebackground;
-    @include transition(background-color .25s 0 linear);
+  padding: 0.1em 0.3em;
+  margin-right: 3px;
+  font-size: fs(small);
+  white-space: nowrap;
+  border: 1px solid currentcolor;
+  border-radius: $radius;
+  color: $badgecolor;
+  background-color: $badgebackground;
+  @include transition(background-color 0.25s 0 linear);
 
-    &:hover {
-        color: $badgecolor;
-        text-decoration: none;
-        cursor: pointer;
-    }
+  &:hover {
+    color: $badgecolor;
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
 
-
 .badge--primary {
-    @extend %badge;
+  @extend %badge;
 }
 
 .badge--error {
-    @extend %badge;
-    color: $color-error;
+  @extend %badge;
+  color: $color-error;
 }
 
 .badge--warning {
-    @extend %badge;
-    color: $color-warning;
+  @extend %badge;
+  color: $color-warning;
 }
 
 .badge--success {
-    @extend %badge;
-    color: $color-success;
+  @extend %badge;
+  color: $color-success;
 }
 
 .badge--info {
-    @extend %badge;
-    color: $color-info;
+  @extend %badge;
+  color: $color-info;
 }
 
 .badge--icon {
-    display: inline-block;
-    color: $badgecolor;
-    border: 1px solid $color-border;
-    border-radius: $radius;
-    padding: $gutterwidth / 2;
-    background-color: $badgebackground;
-    text-align: center;
+  display: inline-block;
+  color: $badgecolor;
+  border: 1px solid $color-border;
+  border-radius: $radius;
+  padding: $gutterwidth / 2;
+  background-color: $badgebackground;
+  text-align: center;
 }
-
 
 /*
 *   Web Colours
 **/
-::-moz-selection {
-    background-color: lighten($color-brand, 65%);
-    color: $color-brand;
-    text-shadow: none;
-}
+// ::-moz-selection {
+//     background-color: lighten($color-brand, 65%);
+//     color: $color-brand;
+//     text-shadow: none;
+// }
 
-::selection {
-    background-color: lighten($color-brand, 65%);
-    color: $color-brand;
-    text-shadow: none;
-}
+// ::selection {
+//     background-color: lighten($color-brand, 65%);
+//     color: $color-brand;
+//     text-shadow: none;
+// }
